# extended-collatz

./: .gitignore  Cargo.toml  README.md  run.sh
src/: big_collatz.rs  collatz.rs  main.rs  parse.rs  write.rs
