[package]
name = "collatz_rust"
version = "0.1.3"
authors = ["DanielMorton <dacmorton@gmail.com>"]
description = "Code for testing an extention of the Collatz Conjecture"
repository = "https://github.com/DanielMorton/extended-collatz"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    ".idea/*",
    "collatz_rust.iml",
    "cycles/*",
    "cycle100/*",
    "tables/*"
]

[dependencies]
clap = "4.5.17"
csv = "1.3.0"
itertools = "0.13.0"
rayon = "1.10.0"
rug = "1.26.0"
serde = {version = "1.0.210", features = ["derive"]}
