[package]
name = "collatz_rust"
version = "0.2.0"
authors = ["DanielMorton <dacmorton@gmail.com>"]
description = "Code for testing an extention of the Collatz Conjecture"
repository = "https://github.com/DanielMorton/extended-collatz"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    ".idea/*",
    "collatz_rust.iml",
    "cycles/*",
    "cycle100/*",
    "tables/*"
]

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
num-traits = "0.2.17"
rayon = "1.8.0"
rug = "1.22.0"
serde = { version = "1.0.188", features = ["derive"] }
structopt = "0.3.26"

[dev-dependencies]
tempfile = "3.8.0"
